//BAD!!! DON'T START NAMES WITH NEW OR COPY

import "Chat.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventChatProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

																				//DONE
message SendAdminMessageResponseProto {
     optional string senderUuid = 1;
     optional string message = 2;
}

//------------------------------------------------------------------------------------------

message GeneralNotificationResponseProto {
	optional string title = 1;
	optional string subtitle = 2;
	optional ColorProto rgb = 3;
}

//------------------------------------------------------------------------------------------

message SendGroupChatRequestProto {
	optional MinimumUserProto sender = 1;
	optional GroupChatScope scope = 2 [default = CLAN];
	optional string chatMessage = 3;
	optional int64 clientTime = 4;
	optional TranslateLanguages globalLanguage = 5; 
}

message SendGroupChatResponseProto {
	optional MinimumUserProto sender = 1;
	optional SendGroupChatStatus status = 2;
	
	enum SendGroupChatStatus {
		SUCCESS = 1;
		TOO_LONG = 2;
		OTHER_FAIL = 3;
		BANNED = 4;
	}
}

message ReceivedGroupChatResponseProto {
	optional MinimumUserProtoWithLevel sender = 1;
	optional GroupChatScope scope = 2 [default = CLAN];
	optional GroupChatMessageProto message = 3;
	optional string chatMessage = 4 [deprecated = true];
	optional bool isAdmin = 5 [deprecated = true];
}

//------------------------------------------------------------------------------------

message PrivateChatPostRequestProto {
	optional MinimumUserProto sender = 1;
	optional string recipientUuid = 2;
	optional string content = 3;
	optional TranslateLanguages contentLanguage = 4;
}

																						//DONE
message PrivateChatPostResponseProto {
	 optional MinimumUserProto sender = 1;
     optional PrivateChatPostStatus status = 2;
	 optional PrivateChatPostProto post = 3;
	 optional PrivateChatDefaultLanguageProto translationSetting = 4;
	 optional bool translationRequired = 5; //if true, a translation was performed
	
     enum PrivateChatPostStatus {
     	SUCCESS = 1;
     	NO_CONTENT_SENT = 2;
     	POST_TOO_LARGE = 3;
     	OTHER_FAIL = 4;
     	BANNED = 5;
	}
}

//------------------------------------------------------------------------------------------

message RetrievePrivateChatPostsRequestProto {
	optional MinimumUserProto sender = 1;
	optional string otherUserUuid = 2;
	
	//all prior posts not including this id
	//if this is not set then return most recent ones
	//switch to UUIDs makes this obsolete; consider date
	optional int32 beforePrivateChatId = 3 [deprecated = true];
	optional TranslateLanguages language = 4;
	
}

message RetrievePrivateChatPostsResponseProto {
	optional MinimumUserProto sender = 1;
	repeated GroupChatMessageProto posts = 2;
	
	//switch to UUIDs makes this obsolete; consider repeated string blackListIds or date
	optional int32 beforePrivateChatId = 3 [deprecated = true ];
	optional RetrievePrivateChatPostsStatus status = 4;
	optional string otherUserUuid = 5;

	enum RetrievePrivateChatPostsStatus {
		SUCCESS = 1;
		FAIL = 2;
	}	
}

//------------------------------------------------------------------------------------

message TranslateSelectMessagesRequestProto {
	optional MinimumUserProto sender = 1; //person receiving msgs
	optional ChatType chatType = 2;
	optional string otherUserUuid = 3;
	optional TranslateLanguages language = 4;
	repeated PrivateChatPostProto messagesToBeTranslated = 5;
	optional bool translateOn = 6;

}

message TranslateSelectMessagesResponseProto {
	optional MinimumUserProto sender = 1;
	repeated PrivateChatPostProto messagesTranslated = 2;
	optional TranslateSelectMessagesStatus status = 3;

	enum TranslateSelectMessagesStatus {
		FAIL_OTHER = 1;
		FAIL_NOT_VALID_LANGUAGE = 2;
		SUCCESS = 3;
	}
}




